--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title><%= full_title yield :title %></title>
     <%= render "layouts/rails_default" %>
   </head>
   <body>
+    <%= render "layouts/header" %>
     <div class="container">
       <% flash.each do |message_type, message| %>
         <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
       <% end %>
       <%= yield %>
+      <%= render "layouts/footer" %>
     </div>
 
   </body>
